@startuml

title __TEMPLATE_METHOD_PATTERN_EXAMPLE's Class Diagram__\n

  namespace pattern_examples.template_method_pattern_example {
    abstract class pattern_examples.template_method_pattern_example.AbstractClassC {
        {abstract} ~ differ()
        {abstract} ~ differ2()
        ~ templatePrint()
    }
  }
  

  namespace pattern_examples.template_method_pattern_example {
    class pattern_examples.template_method_pattern_example.ClassA {
        + differ()
        ~ differ2()
    }
  }
  

  namespace pattern_examples.template_method_pattern_example {
    class pattern_examples.template_method_pattern_example.ClassB {
        + differ()
        ~ differ2()
    }
  }
  

  namespace pattern_examples.template_method_pattern_example {
    class pattern_examples.template_method_pattern_example.Main {
        {static} + main()
    }
  }
  

  pattern_examples.template_method_pattern_example.ClassA -up-|> pattern_examples.template_method_pattern_example.AbstractClassC
  pattern_examples.template_method_pattern_example.ClassB -up-|> pattern_examples.template_method_pattern_example.AbstractClassC


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
